# alphagenome

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt  setup.py  test_training.py  train_dummy.py  train_dummy_alphagenome.py  train_regulondb.py
alphagenome/: __init__.py  alphagenome.py
alphagenome_pytorch/: __init__.py  alphagenome.py  config.py  data.py  dna_model.py
alphagenome_pytorch/convert/: convert_checkpoint.py  mapping_spec.py
alphagenome_pytorch/data/: __init__.py  batch.py  bundles.py  dataset.py  dummy.py
alphagenome_pytorch/evals/: __init__.py  regression_metrics.py  track_prediction.py
alphagenome_pytorch/scoring/: __init__.py  center_mask.py  contact_map.py  gene_mask.py  interval_scoring.py  polyadenylation.py  splice_junction.py  variant_scoring.py
bactagenome/: __init__.py
bactagenome/data/: __init__.py  augmentation.py  dummy.py  regulondb_dataset.py  regulondb_processor.py
bactagenome/evaluation/: __init__.py
bactagenome/model/: __init__.py  components.py  config.py  core.py  heads.py  losses.py  utils.py
bactagenome/training/: __init__.py  losses.py  trainer.py
configs/: publication.yaml
configs/model/: bacteria_base.yaml
configs/training/: dummy.yaml  dummy_full.yaml  dummy_full_reduced.yaml  phase1_regulondb.yaml  phase1_regulondb_reduced.yaml
docs/: DATA_AUGMENTATION.md  IMPROVED_PIPELINE_SUMMARY.md  MODALITY_CHANGES_SUMMARY.md  OUTPUT_MODALITIES.md  configuration_guide.md  model_architecture.md  training_guide.md
explore/colab/: quick_start_pytorch.ipynb  variant_eval_examples_pytorch.ipynb
notebooks/: compare_jax_pytorch.ipynb  quick_start_pytorch.ipynb
scripts/: analyze_memory_composition.py  benchmark_selective_inference.py  benchmark_selective_inference_detailed.py
tests/: __init__.py  test_alphagenome.py  test_integration_jax_torch.py  test_model.py  test_new_modules.py  test_regression.py  test_selective_inference.py  verification_utils.py
tests/regression_data/: input_sequence.npy  output_contact_maps.npy  output_embeds_128bp.npy  output_embeds_pair.npy  output_rna_seq_128bp.npy
